--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+* {
+  margin: 0; /* Убираем встроенные отступы */
+  padding: 0; /* Убираем встроенные отступы */
+  box-sizing: border-box; /* Устанавливаем модель коробки */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p{
+  color: rgb(24, 22, 22);
+  font-size: 16px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+  color: blanchedalmond !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+ h2,h3,h4,h5,h6{
+  color: black;
+}
+body {
+  background-color: rgb(27, 27, 32); /* Фон всего приложения синий */
+  color: white; /* Цвет текста, чтобы он был виден на синем фоне */
 }
 
-.App-link {
-  color: #61dafb;
+.app-container {
+ padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header {
+  width: 100%; /* Ширина шапки на всю ширину */
+  margin-bottom: 20px; /* Отступ снизу для шапки, если требуется */
+}
+
+.content-container {
+  display: flex; /* Используем Flexbox для размещения элементов */
+}
+
+.outlet {
+  flex: 1; /* Занимает 50% ширины */
+  margin-right: 20px; /* Отступ справа */
+}
+
+.map-image {
+  max-width: 100%; /* Максимальная ширина изображения */
+  height: auto; /* Автоматическая высота для сохранения пропорций */
+  flex: 1; /* Занимает 50% ширины */
 }
