--- a/src/App.css
+++ b/src/App.css
@@ -4,17 +4,20 @@
   box-sizing: border-box; /* Устанавливаем модель коробки */
 }
 
-p{
+p {
   color: rgb(24, 22, 22);
   font-size: 16px;
 }
 
-h1{
+h1 {
   color: blanchedalmond !important;
 }
 
-
- h2,h3,h4,h5,h6{
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: black;
 }
 body {
@@ -23,7 +26,7 @@ body {
 }
 
 .app-container {
- padding: 0;
+  padding: 0;
 }
 
 .header {
