--- a/src/styles/HookForm.css
+++ b/src/styles/HookForm.css
@@ -1,71 +1,71 @@
 .modal-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.6); /* Затемнение фона */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000; /* Поверх остальных элементов */
-  }
-  
-  .hook-form {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 400px; /* Ширина формы */
-    position: relative; /* Для позиционирования кнопки закрытия */
-  }
-  
-  .hook-form h2 {
-    margin-bottom: 20px;
-    text-align: center; /* Центрируем заголовок */
-  }
-  
-  .form-group {
-    margin-bottom: 15px; /* Отступ между полями */
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 5px; /* Отступ под меткой */
-  }
-  
-  input[type="text"],
-  input[type="url"],
-  textarea {
-    width: 100%; /* Ширина 100% */
-    padding: 10px;
-    border: 1px solid #ccc; /* Светлое обрамление */
-    border-radius: 4px; /* Закругленные углы */
-    box-sizing: border-box; /* Подсчет отступов в ширине */
-  }
-  
-  .button_form--save {
-    width: 100%; /* Ширина кнопки 100% */
-    padding: 10px;
-    background-color: #007bff; /* Цвет кнопки */
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  .button_form--save:hover {
-    background-color: #0056b3; /* Цвет кнопки при наведении */
-  }
-  
-  .close-button {
-    width: 40px;
-    height: 40px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border: none;
-    font-size: 24px;
-    cursor: pointer;  
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.hook-form {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  position: relative;
+}
+
+.hook-form h2 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type='text'],
+input[type='url'],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.button_form--save {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.button_form--save:hover {
+  background-color: #0056b3;
+}
+
+.close-button {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
